--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "dist/index.esm.js",
   "author": "Ismail Namdar",
   "license": "MIT",
+  "repository": "ismailnamdar/word-controller",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
